Revisions to Skills list

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
       <td>Organization</td>
       <td>★★★★☆</td>
     </tr>
+    <tr>
+      <td>Cooking</td>
+      <td>★★★★☆</td>
+    </tr>
+    <tr>
+      <td>Troubleshooting</td>
+      <td>★★★★☆</td>
+    </tr>
 
   </table>
 
